awa figure edits

--- a/paper/theor-experiment.tex
+++ b/paper/theor-experiment.tex
@@ -577,7 +577,7 @@ beam is low energy and changing rapidly.
 
 \begin{figure}%[h]
 	\centering
-	\includegraphics[width=0.8\linewidth]{Report/timestep_comparison}
+	\includegraphics[width=\linewidth]{Report/timestep_comparison}
 	\caption{Comparison of different fidelity models (dT stands for time step).}
 	\label{tstep}
 \end{figure}
@@ -892,7 +892,7 @@ see Figs.~\ref{fig:pareto1} and \ref{fig:pareto2}.
 
 \begin{figure}
 	\includegraphics[width=0.5\textwidth]{../pareto_stat_plots/xy_vs_pxy_pareto_front_quads_before_Q5}
-	\caption{Pareto front comparing transverse beam size ($\sigma_{x,y}$) and transverse momentum ($\sigma_{px,py}$).}
+	\caption{Pareto front comparing transverse beam sizes ($\sigma_{x,y}$) and transverse momentum ($\sigma_{px,py}$).}
 	\label{fig:pareto1}
 \end{figure}
 
@@ -903,7 +903,7 @@ see Figs.~\ref{fig:pareto1} and \ref{fig:pareto2}.
 	\llap{\raisebox{1.9cm}{%  move next graphics to top right corner
 			\includegraphics[height=4.5cm]{../pareto_stat_plots/dE_vs_zrms_pareto_front_quads_before_Q5}%
 	}}
-	\caption{Comparison of energy spread and bunch length ($\sigma_z$). \nrnote{add tikz arrows to point to left side of curve?}}
+	\caption{Pareto front comparing energy spread (dE) and bunch length ($\sigma_z$). \nrnote{add tikz arrows to point to left side of curve?}}
 	\label{fig:pareto2}
 \end{figure}  
 
@@ -926,6 +926,7 @@ Overall this solution is satisfactory, and meets all requirements at the AWA.
 
 \begin{figure}
 	\includegraphics[width=0.48\textwidth]{../pareto_stat_plots/xyrms-zrms_newobj}\\
+	\vspace{2em}
 	\includegraphics[width=0.48\textwidth]{../pareto_stat_plots/xy-max-min-zrms_newobj}
 	\caption{Optimized beam sizes along high charge beam line.}
 	\label{fig:stat}
